<resources>

    <string name="app_name">推流端</string>

    <string name="test_userid"></string>
    <string name="test_roomid"></string>
    <string name="test_username"></string>
    <string name="test_passwd"></string>

    <!--SplashActivity-->
    <string name="txt_splash_tip">CC视频-直播</string>
    <!--LoginActivity-->
    <string name="txt_login_userid">请输入用户id</string>
    <string name="txt_login_roomid">请输入直播房间id</string>
    <string name="txt_login_username">请输入用户名</string>
    <string name="txt_login_passwd">请输入密码</string>
    <string name="txt_login_submit">登录</string>
    <!--登录页-->
    <string name="login_uid_hint">16位账号ID</string>
    <string name="login_roomid_hint">32位直播间ID</string>
    <string name="login_name_hint">聊天中显示的名字</string>
    <string name="login_t_password_hint">讲师密码</string>
    <string name="login_s_password_hint">观看密码</string>
    <string name="login_liveid_hint">16位直播ID</string>
    <!--SettingActivity-->
    <string name="setting_tip">直播设置</string>
    <string name="setting_start">开始直播</string>
    <string name="setting_orientation">横屏模式</string>
    <string name="setting_beauty">美颜</string>
    <string name="camera">摄像头</string>
    <string name="resolution">分辨率</string>
    <string name="bitrate">码率</string>
    <string name="fps">帧率</string>
    <string name="server">服务器</string>
    <string name="setting_camera_default">前置摄像头</string>
    <string name="setting_resolution_default">标清</string>
    <string name="setting_bitrate_default">450</string>
    <string name="setting_fps_default">20</string>
    <string name="setting_server_test_speed">测速</string>
    <string name="select_camera_tip">选择摄像头</string>
    <string name="select_resolution_tip">选择分辨率</string>
    <string name="select_server_tip">选择服务器</string>
    <string name="seek_fps_tip">拖动滑块调整帧率</string>
    <string name="seek_bitrate_tip">拖动滑块调整码率</string>
    <!--PushActivity-->
    <string name="text_push_username">用户名 : </string>
    <string name="text_push_watch_count">观看人数 : </string>
    <string name="text_push_send">发送</string>
    <!--连接状态-->
    <string name="text_push_status_noconnect">未连接</string>
    <string name="text_push_status_success">连接成功</string>
    <string name="text_push_status_failed">连接失败</string>
    <string name="text_push_status_close">连接关闭</string>
    <string name="text_push_status_reconnect">正在重连</string>
    <string name="text_push_status_disconnect">连接断开</string>
    <!--标题-->
    <string name="txt_title_right_desc">title right desc</string>
    <string name="txt_title_left_desc">title left desc</string>
    <!--popupwindow-->
    <string name="choose_dialog_cancel_txt">取消</string>
    <string name="choose_dialog_ok_txt">确定</string>
    <string name="loading_txt">Loading</string>
    <string name="txt_handle_beautiful">美颜</string>
    <string name="txt_handle_switch">翻转</string>
    <string name="text_beautiful_white">美白</string>
    <string name="text_beautiful_skin">磨皮</string>
    <string name="text_beautiful_pink">粉嫩</string>
    <string name="text_singe_choose_tip">请选择</string>

    <!--扫码-->
    <string name="scan_text">将二维码/条码放入框内, 即可自动扫描</string>

    <!--聊天-->
    <string name="text_colon">:</string>
    <string name="text_chat_input_hint">请输入文字</string>
    <string name="push_private_list_tip">私聊列表</string>

</resources>
