<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_push_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.bokecc.sdk.mobile.push.view.DWTextureView
            android:id="@+id/id_push_gl_surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <TextView
        android:id="@+id/id_push_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_push_status_noconnect"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/id_push_info"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/id_push_status"
        android:layout_marginStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/push_info_bg">

        <TextView
            android:id="@+id/id_push_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:maxEms="14"
            android:lines="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/id_push_watch_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/id_push_username"
            android:layout_below="@id/id_push_username"
            android:layout_marginTop="7dp"
            android:textColor="#ffffff"
            android:text="在线人数：1人"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/id_push_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/id_push_watch_count"
            android:layout_below="@id/id_push_watch_count"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="7dp"
            android:textColor="#ffffff"
            android:textSize="11dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_push_oper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/id_push_close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:src="@drawable/push_close" />

        <ImageView
            android:id="@+id/id_push_volume"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@id/id_push_close"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/id_push_close"
            android:clickable="true"
            android:src="@drawable/push_volume" />

        <ImageView
            android:id="@+id/id_push_camera"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@id/id_push_close"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/id_push_volume"
            android:clickable="true"
            android:src="@drawable/push_swap_camera" />

        <ImageView
            android:id="@+id/id_push_beauty"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@id/id_push_close"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/id_push_camera"
            android:clickable="true"
            android:src="@drawable/push_beauty_open" />

        <ImageView
            android:id="@+id/id_push_private_chat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@id/id_push_close"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@id/id_push_beauty"
            android:clickable="true"
            android:src="@drawable/push_private_msg"/>

        <ImageView
            android:id="@+id/id_push_chat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@id/id_push_close"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:src="@drawable/push_chat" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/id_push_temp_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00ffffff"
        android:clickable="true"
        android:visibility="gone" />

    <include
        android:id="@+id/id_push_beautiful_window"
        layout="@layout/push_beautiful_setting_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <include
        android:id="@+id/id_push_volume_window"
        layout="@layout/push_volume_setting_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_push_chat_list"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_above="@id/id_push_oper"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:background="#00000000" />

    <LinearLayout
        android:id="@+id/id_push_chat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#c2ffffff"
        android:orientation="vertical"
        android:visibility="invisible" >

        <!--私聊用户列表-->
        <LinearLayout
            android:id="@+id/id_private_chat_user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#d8f8f8f8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ellipsize="end"
                    android:maxEms="15"
                    android:maxLines="1"
                    android:text="@string/push_private_list_tip"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/id_private_chat_user_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/private_close"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="#DDDDDD"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_private_chat_user_list"
                android:layout_width="match_parent"
                android:layout_height="262dp"
                android:background="#e6FAFAFA"
                android:overScrollMode="never"
                android:scrollbars="none"/>
        </LinearLayout>

        <!--私聊列表-->
        <LinearLayout
            android:id="@+id/id_private_chat_msg_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="#d8f8f8f8">

                <ImageView
                    android:id="@+id/id_private_chat_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/private_back"/>

                <TextView
                    android:id="@+id/id_private_chat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ellipsize="end"
                    android:maxEms="15"
                    android:maxLines="1"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/id_private_chat_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/private_close"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="#DDDDDD"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_private_chat_list"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="#e6FAFAFA"
                android:overScrollMode="never"
                android:scrollbars="none"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/id_chat_send_input_layout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/id_push_chat_send"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="58dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="11dp"
                android:background="@drawable/push_send_bg"
                android:text="@string/text_push_send"
                android:textColor="#ffffff" />

            <RelativeLayout
                android:id="@+id/id_chat_input_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="11dp"
                android:layout_toStartOf="@id/id_push_chat_send"
                android:background="@drawable/push_input_bg">

                <ImageView
                    android:id="@+id/id_push_chat_emoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginTop="9dp"
                    android:clickable="true"
                    android:src="@drawable/push_chat_emoji_normal" />

                <EditText
                    android:id="@+id/id_push_chat_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_toStartOf="@id/id_push_chat_emoji"
                    android:background="@null"
                    android:hint="@string/text_chat_input_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:textColorHint="#666666"
                    android:textSize="14sp" />

            </RelativeLayout>
        </RelativeLayout>

        <GridView
            android:id="@+id/id_push_emoji_grid"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:background="#f2efed"
            android:numColumns="7"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:visibility="gone" />

    </LinearLayout>

    <!--遮罩层-->
    <FrameLayout
        android:id="@+id/id_push_mask_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/id_push_chat_layout"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:visibility="gone"/>

</RelativeLayout>
